crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__prediction__tests__exact_context_conflict_marks_different_state_alt_sets_inexact.snap
---
source: crates/antlr-rust-runtime/src/prediction.rs
expression: "exact_context_sll_conflict(&configs, &mut arena, &mut workspace, |_| false)"
---
Some(
    SllConflict {
        alts: {
            1,
            2,
            3,
        },
        exact: false,
        from_context_containment: true,
    },
)
