crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__prediction__tests__exact_context_conflict_proves_containment_without_shared_context_ids.snap
---
source: crates/antlr-rust-runtime/src/prediction.rs
expression: "exact_context_sll_conflict(&configs, &mut arena, &mut workspace, |_| false)"
---
Some(
    SllConflict {
        alts: {
            1,
            2,
        },
        exact: false,
        from_context_containment: true,
    },
)
